import VectorModel as m


class ObjectVectorModel(m.VectorModel):
	def __init__(self, id, value, tagName, parent):        
		super().__init__(self, id, value, tagName, parent)