class Model:
	def __init__(self):
		print("Hello my name is ")

	def myfunc(self):
		print("Hello my name is ")